@@ -59,6 +59,19 @@ public class Cache {
 
         return null;
     }
+    
+    /**
+     * Retrieves a value for given key from the cache
+     * autocasting it to the required class
+     * 
+     * @param key The key on which the value is stored
+     * @param clazz The class to cast to
+     * @return The class to cast to to containing the cache value or null if the key is not found
+     */
+    @SuppressWarnings("unchecked")
+    public <T> T get(String key, Class<T> clazz) {
+        return (T) this.cacheInstance.get(key).getObjectValue();
+    }
 
     /**
      * Clears the complete cache by removing all entries
